# geo2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Geo2.cpp  Geo2.vcxproj  Geo2.vcxproj.filters  Geo2_v141.vcxproj  README.md  RegenerateProjectFile.cmd  Util.cpp  Util.h  Vector.cpp  Vector.h  VectorD.cpp  geo2.ccpproj  geo2_release.yaml  makefile  resource.h  test_geo2Vector3.py  vcpkg-configuration.json  vcpkg.json  version.h
.teamcity/: pom.xml  settings.kts
.teamcity/MacOS/: Project.kt
.teamcity/Windows/: Project.kt
.teamcity/_Self.kt/: Project.kt
.teamcity/_Self.kt/buildTypes/: PublishToPerforce.kt
cmake/: CcpBuildConfigurations.cmake  CcpTargetConfigurations.cmake  PyTestDiscoverTests.cmake  README.md
cmake/internal/: PyTestDiscoverTestsImpl.cmake
cmake/triplets/: arm64-osx-carbon.cmake  x64-osx-carbon.cmake  x64-windows-carbon.cmake
geo2.xcodeproj/: project.pbxproj
python/geo2/: __init__.py  package.yaml
python/geo2/test/: test_geo2Vector3.py
python/geo2helpers/: __init__.py  geo2helpers.py  package.yaml
python/geo2helpers/test/: __init__.py  test_geo2helpers.py  test_main.py
src/: Geo2.cpp  Util.cpp  Util.h  Vector.cpp  Vector.h  VectorD.cpp  autoversion.h  version.h
